[gd_scene load_steps=7 format=3 uid="uid://bfi0oibojw25c"]

[ext_resource type="Script" uid="uid://dtyn16jw6v334" path="res://scripts/cards/Command.gd" id="1_u6u2w"]
[ext_resource type="Texture2D" uid="uid://dwcjksqiy8sbm" path="res://sprites/arrow_up.svg" id="2_r3s1r"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qfsrn"]
size = Vector2(312.218, 65.0218)

[sub_resource type="LabelSettings" id="LabelSettings_5kyvh"]
font_size = 13
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_r3s1r"]
font_color = Color(0, 0, 0, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_r3s1r"]
size = Vector2(26, 20)

[node name="Command" type="Node2D"]
script = ExtResource("1_u6u2w")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(46.5, 10)
scale = Vector2(0.297869, 0.307589)
shape = SubResource("RectangleShape2D_qfsrn")

[node name="Icon" type="TextureRect" parent="."]
z_index = 1
offset_right = 30.0
offset_bottom = 32.0
scale = Vector2(0.626336, 0.626336)

[node name="Texture" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 119.0
offset_bottom = 20.0
mouse_filter = 2

[node name="Sprite" type="ColorRect" parent="Texture"]
layout_mode = 0
offset_right = 119.0
offset_bottom = 20.0
mouse_filter = 2

[node name="TextLabel" type="Label" parent="Texture"]
texture_filter = 6
layout_mode = 0
offset_left = 21.0
offset_right = 98.0
offset_bottom = 23.0
text = "атака"
label_settings = SubResource("LabelSettings_5kyvh")
horizontal_alignment = 1

[node name="NumLabel" type="Label" parent="Texture"]
texture_filter = 6
layout_mode = 0
offset_left = 92.0
offset_top = -2.0
offset_right = 119.0
offset_bottom = 21.0
text = "1"
label_settings = SubResource("LabelSettings_r3s1r")
horizontal_alignment = 1

[node name="NumArea" type="Area2D" parent="Texture/NumLabel"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Texture/NumLabel/NumArea"]
position = Vector2(14, 12)
shape = SubResource("RectangleShape2D_r3s1r")

[node name="ColorRect" type="ColorRect" parent="Texture/NumLabel"]
layout_mode = 0
offset_left = 1.0
offset_top = 2.0
offset_right = 27.0
offset_bottom = 22.0
mouse_filter = 2
color = Color(0, 0, 0, 0.360784)

[node name="Up" type="Button" parent="Texture"]
visible = false
z_index = 20
layout_mode = 0
offset_left = 119.0
offset_top = -6.0
offset_right = 927.0
offset_bottom = 802.0
scale = Vector2(0.01854, 0.01854)
icon = ExtResource("2_r3s1r")

[node name="Down" type="Button" parent="Texture"]
visible = false
z_index = 20
layout_mode = 0
offset_left = 134.0
offset_top = 26.0
offset_right = 942.0
offset_bottom = 834.0
rotation = 3.14159
scale = Vector2(0.01854, 0.01854)
icon = ExtResource("2_r3s1r")

[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
[connection signal="input_event" from="Texture/NumLabel/NumArea" to="." method="_on_num_area_input_event"]
[connection signal="pressed" from="Texture/Up" to="." method="_on_up_pressed"]
[connection signal="pressed" from="Texture/Down" to="." method="_on_down_pressed"]
